# alright

./: .gitignore  Cargo.toml  Teasing.md  error.txt
alright/: Cargo.toml
alright-common/: Cargo.toml
alright-common/src/: lib.rs
alright-common/src/modules/: commonly_exceptions.rs  mod.rs
alright-derive/: Cargo.toml
alright-derive/src/: lib.rs  utils.rs
alright-little_try/: Cargo.toml
alright/src/: lib.rs
alright/src/modules/: mod.rs  traits.rs
alright/src/modules/commonly/: mod.rs
alright/src/modules/implements/: base_exception.rs  mod.rs  property.rs
alright/src/modules/traits/: commonly.rs
alright/src/modules/types/: exception.rs  mod.rs  property.rs  train.rs
exception/: Cargo.toml
exception-derive/: Cargo.toml
src/modules/: exception.rs  property.rs  traits.rs
