[package]
name = "alright-common"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alright = { path = "../alright" }
alright-derive = { path = "../alright-derive"}
serde = { version = "1.0.228", features = ["derive"] }

[lib]
path = "src/lib.rs"
