[package]
name = "alright-common"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
alright = { path = "../alright", version = "0.1.1" }
alright-derive = { path = "../alright-derive", version = "0.1.1"}
serde = { version = "1.0.228", features = ["derive"] }

[lib]
path = "src/lib.rs"
