[package]
name = "alright-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "extra-traits", "parsing"] }
proc-macro2 = "1.0.106"
